--- a/content/contribute-pages/overview.mdx
+++ b/content/contribute-pages/overview.mdx
@@ -4,46 +4,39 @@ ord: 1
 menu: Overview
 ---
 
-The Social Sciences and Humanities Open Marketplace needs you! The SSH Open
-Marketplace is the result of collective and collaborative efforts and you are
-very welcome to contribute. You will find on these pages a summary of the
-different ways you can get involved.
+The Social Sciences and Humanities Open Marketplace needs you! The SSH Open Marketplace is the
+result of collective and collaborative efforts and you are very welcome to contribute. You will find
+on these pages a summary of the different ways you can get involved.
 
 **As a visitor** of the SSH Open Marketplace, and without any account, you can
 [report an issue](/contact), leave a comment or
-[reach out to the SSH Open Marketplace Editorial Team](/about/team). Help us to
-improve the service, or just let us know what you think or how we can help. We
-are always happy to get in touch with curious visitors or new comers!
+[reach out to the SSH Open Marketplace Editorial Team](/about/team). Help us to improve the service,
+or just let us know what you think or how we can help. We are always happy to get in touch with
+curious visitors or new comers!
 
-**As a contributor**, you can help us to improve the SSH Open Marketplace
-data/content. There are two main ways you can help us make the Marketplace
-better for researchers just like you. FIrstly, you can improve the quality of
-existing records by suggesting edits. As well, you can add entirely new items to
-the Marketplace, either by directly suggesting an entirely new entry, or by
-proposing a source for mass ingestion. All you need to know for these
-contributions is explained in these pages:
+**As a contributor**, you can help us to improve the SSH Open Marketplace data/content. There are
+two main ways you can help us make the Marketplace better for researchers just like you. FIrstly,
+you can improve the quality of existing records by suggesting edits. As well, you can add entirely
+new items to the Marketplace, either by directly suggesting an entirely new entry, or by proposing a
+source for mass ingestion. All you need to know for these contributions is explained in these pages:
 
-1. You would like to improve an item you've found on the SSH Open Marketplace,
-   to add a relation between two (or more) items, just get in and follow our
-   recommendations to
+1. You would like to improve an item you've found on the SSH Open Marketplace, to add a relation
+   between two (or more) items, just get in and follow our recommendations to
    [edit and enrich existing items](/contribute/enrich-an-individual-item)
-2. You have noticed that your favorite tool or training material is not
-   referenced in the SSH Open Marketplace and you would like to add it, follow
-   our guidelines to
+2. You have noticed that your favorite tool or training material is not referenced in the SSH Open
+   Marketplace and you would like to add it, follow our guidelines to
    [create an individual item](/contribute/create-an-individual-item)
 3. The mass ingests are managed by the Editorial Team, but you can
    [Suggest a new source](/about/data#inclusion-criteria)
 
-As a **moderator** or **administrator**, you are a member of the
-[Editorial Team](/about/team), and you have some missions to ensure the SSH Open
-Marketplace quality. The
+As a **moderator** or **administrator**, you are a member of the [Editorial Team](/about/team), and
+you have some missions to ensure the SSH Open Marketplace quality. The
 [moderator guidelines](/contribute/moderator-guidelines) and the
-[administrator guidelines](/contribute/administrator-guidelines) are the public
-documentation providing an overview of these missions. Are you interested in
-joining the editorial team? Get in touch with us!
+[administrator guidelines](/contribute/administrator-guidelines) are the public documentation
+providing an overview of these missions. Are you interested in joining the editorial team? Get in
+touch with us!
 
-Like the SSH Open Marketplace? Speak about it around you and help us to promote
-this discovery service for Social Sciences and Humanities.
-[Here are some useful materials](/about/data#inclusion-criteria). Let us know
-when and where you have acted as an ambassador of the Marketplace and contact us
-if you need additional information!
+Like the SSH Open Marketplace? Speak about it around you and help us to promote this discovery
+service for Social Sciences and Humanities.
+[Here are some useful materials](/about/data#inclusion-criteria). Let us know when and where you
+have acted as an ambassador of the Marketplace and contact us if you need additional information!
