--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -2,6 +2,5 @@
 title: Social Sciences & Humanities Open Marketplace
 ---
 
-Discover new and contextualised resources for your research in Social Sciences
-and Humanities: tools, services, training materials, workflows and datasets.
-[Read more...](/about/service)
+Discover new and contextualised resources for your research in Social Sciences and Humanities:
+tools, services, training materials, workflows and datasets. [Read more...](/about/service)
