--- a/content/about-pages/data.mdx
+++ b/content/about-pages/data.mdx
@@ -4,92 +4,85 @@ ord: 2
 menu: About the data population
 toc: true
 ---
+
 ## Sources
 
-During the development phase of the SSH Open Marketplace, we identified and
-prioritised **trusted sources** from which to gather information to populate the
-SSH Open Marketplace. Over the 3 years of the SSHOC project, 15 sources have
-been ingested for a total of over 5,000 individual items. The sources are listed
-below.
+During the development phase of the SSH Open Marketplace, we identified and prioritised **trusted
+sources** from which to gather information to populate the SSH Open Marketplace. Over the 3 years of
+the SSHOC project, 15 sources have been ingested for a total of over 5,000 individual items. The
+sources are listed below.
 
 <div className="grid gap-y-4 grid-cols-[100px_1fr] xs:grid-cols-[150px_1fr] gap-x-4">
 
 ![TAPoR logo](/assets/images/source_TAPoR_logo.png "TAPoR logo")
 
-[TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text
-analysis and retrieval.
+[TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text analysis and
+retrieval.
 
 ![Programming Historian logo](/assets/images/ph-en.svg "Programming Historian logo")
 
-The [Programming Historian](https://programminghistorian.org/) publishes
-novice-friendly, peer-reviewed tutorials that help humanists learn a wide range
-of digital tools, techniques, and workflows to facilitate research and teaching.
+The [Programming Historian](https://programminghistorian.org/) publishes novice-friendly,
+peer-reviewed tutorials that help humanists learn a wide range of digital tools, techniques, and
+workflows to facilitate research and teaching.
 
 ![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg "Standardization Survival Kit logo")
 
-The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a
-collection of research use case scenarios illustrating best practices in Digital
-Humanities and Heritage research.
+The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a collection of research use
+case scenarios illustrating best practices in Digital Humanities and Heritage research.
 
 ![Language Resource Switchboard logo](/assets/images/source-icon-services-switchboard.png)
 
-The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you
-find tools that can process your data.
+The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you find tools that can
+process your data.
 
 ![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png "dblp computer science bibliography logo")
 
-The [dblp computer science bibliography](https://dblp.org/) provides open
-bibliographic information on major computer science journals and proceedings.
-Only a subset of publications related to digital humanities is being ingested in
-the SSH Open Marketplace.
+The [dblp computer science bibliography](https://dblp.org/) provides open bibliographic information
+on major computer science journals and proceedings. Only a subset of publications related to digital
+humanities is being ingested in the SSH Open Marketplace.
 
 ![EOSC logo](/assets/images/source_eosc_logo.png "EOSC logo")
 
-The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/)
-is an integrated platform that allows easy access to plenty of services and
-resources for various research domains along with integrated data analytics
-tools. Only a subset of resources, relevant for Social Sciences and Humanities,
-is being ingested in the SSH Open Marketplace.
+The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/) is an integrated
+platform that allows easy access to plenty of services and resources for various research domains
+along with integrated data analytics tools. Only a subset of resources, relevant for Social Sciences
+and Humanities, is being ingested in the SSH Open Marketplace.
 
 ![Humanities Data](/assets/images/hdata.png "Humanities Data")
 
-The [Humanities Data](https://humanitiesdata.com/) website collects and presents
-datasets and recipes stemming from Digital Humanities projects.
+The [Humanities Data](https://humanitiesdata.com/) website collects and presents datasets and
+recipes stemming from Digital Humanities projects.
 
 ![CESSDA Training](/assets/images/cessdatraining.png "CESSDA Training")
 
-The [CESSDA Training Working Group](https://www.cessda.eu/Training),
-implementing one of the four strategic pillars of CESSDA, offers a wide variety
-of training in Research Data Management and data archiving to both researchers
-and data curators.
+The [CESSDA Training Working Group](https://www.cessda.eu/Training), implementing one of the four
+strategic pillars of CESSDA, offers a wide variety of training in Research Data Management and data
+archiving to both researchers and data curators.
 
 ![CLARIN Resource Families](/assets/images/clarin_families.png "CLARIN Resource Families")
 
-The [CLARIN Resource Families](https://www.clarin.eu/resource-families) are a
-number of curated collections of corpora and tools. They are manually put
-together by CLARIN with the aim to provide a user-friendly overview of existing
-resources within and without the CLARIN infrastructure.
+The [CLARIN Resource Families](https://www.clarin.eu/resource-families) are a number of curated
+collections of corpora and tools. They are manually put together by CLARIN with the aim to provide a
+user-friendly overview of existing resources within and without the CLARIN infrastructure.
 
 ![DARIAH-Campus](/assets/images/campus.png "DARIAH-Campus")
 
-[DARIAH-Campus](https://campus.dariah.eu/) is both a discovery framework and a
-hosting platform for DARIAH and DARIAH-affiliated training and education
-materials.
+[DARIAH-Campus](https://campus.dariah.eu/) is both a discovery framework and a hosting platform for
+DARIAH and DARIAH-affiliated training and education materials.
 
 ![DARIAH Contribution Tool](/assets/images/ikct.png "DARIAH Contribution Tool")
 
-DARIAH member states contribute to the DARIAH distributed infrastructure with a
-diverse range of resources and services, and declare these in-kind contributions
-via the [DARIAH contribution tool](https://contrib.dariah.eu/). A selected set
-of these contributions has been added to the SSH Open Marketplace.
+DARIAH member states contribute to the DARIAH distributed infrastructure with a diverse range of
+resources and services, and declare these in-kind contributions via the
+[DARIAH contribution tool](https://contrib.dariah.eu/). A selected set of these contributions has
+been added to the SSH Open Marketplace.
 
 ![SSHOC logo](/assets/images/sshoc.png "SSHOC logo")
 
-The [SSHOC service catalogue](https://www.sshopencloud.eu/service-catalogue) is
-the result of all SSHOC Work Packages to collect and consolidate the SSHOC
-services (or resources) offered. Based on the progressing implementation of the
-project, resources referenced in the catalogue are the most visible outputs of
-the SSHOC project.
+The [SSHOC service catalogue](https://www.sshopencloud.eu/service-catalogue) is the result of all
+SSHOC Work Packages to collect and consolidate the SSHOC services (or resources) offered. Based on
+the progressing implementation of the project, resources referenced in the catalogue are the most
+visible outputs of the SSHOC project.
 
 ![SSHOC logo](/assets/images/sshoc.png "SSHOC logo")
 
@@ -98,33 +91,29 @@ Training materials produced as part of the
 
 ![SSHOC Conversion Hub](/assets/images/conversionhub.png "SSHOC Conversion Hub")
 
-The
-[SSH Conversion Hub is an outcome of SSHOC WP3](https://doi.org/10.5281/zenodo.5561604).
-It allows users to search for tools that convert from one (meta-)data/file
-format to another one, e.g. from CSV (comma-separated values) to TEI (Text
-Encoding Initiative). import withHeadingIds from 'remark-slug'
+The [SSH Conversion Hub is an outcome of SSHOC WP3](https://doi.org/10.5281/zenodo.5561604). It
+allows users to search for tools that convert from one (meta-)data/file format to another one, e.g.
+from CSV (comma-separated values) to TEI (Text Encoding Initiative). import withHeadingIds from
+'remark-slug'
 
 ![SSH Training Discovery Toolkit](/assets/images/tdt.png "SSH Training Discovery Toolkit")
 
-The [SSH Training Discovery Toolkit](https://training-toolkit.sshopencloud.eu)
-acts as an overview on relevant sources that hold (digital) material for
-trainers. For such sources, selected items are described in more detail than is
-useful for the SSH community and give a hint about what training material to
-expect from the source.
+The [SSH Training Discovery Toolkit](https://training-toolkit.sshopencloud.eu) acts as an overview
+on relevant sources that hold (digital) material for trainers. For such sources, selected items are
+described in more detail than is useful for the SSH community and give a hint about what training
+material to expect from the source.
 
 </div>
 
-If you don't see some of these sources in the Marketplace, it is because they
-are still in the process of being ingested. New sources will also be regularly
-added. Between 1 to 4 sources per year are expected starting mid-2022. As there
-are a few criteria to comply with, please
-[check the Contribute section](/contribute/overview) if you would like to
-suggest new sources.
+If you don't see some of these sources in the Marketplace, it is because they are still in the
+process of being ingested. New sources will also be regularly added. Between 1 to 4 sources per year
+are expected starting mid-2022. As there are a few criteria to comply with, please
+[check the Contribute section](/contribute/overview) if you would like to suggest new sources.
 
 ## Types of content
 
-The conceptual approach used to structure and classify the content of the SSH
-Open Marketplace led to the identification of 5 main content types.
+The conceptual approach used to structure and classify the content of the SSH Open Marketplace led
+to the identification of 5 main content types.
 
 <div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
@@ -136,14 +125,14 @@ Open Marketplace led to the identification of 5 main content types.
 
 Materials or products used to perform activities such as:
 
-* Desktop clients solutions (to be installed locally)
-* Browser-based or command-line based resources
-* Mobile apps
-* Programming libraries or APIs
-* Data catalogues
+- Desktop clients solutions (to be installed locally)
+- Browser-based or command-line based resources
+- Mobile apps
+- Programming libraries or APIs
+- Data catalogues
 
-*Example:* [Gephi](/tool-or-service/87wJWo) is a visualisation and exploration
-software for all kinds of graphs and networks.
+_Example:_ [Gephi](/tool-or-service/87wJWo) is a visualisation and exploration software for all
+kinds of graphs and networks.
 
 </div>
 </div>
@@ -156,12 +145,11 @@ software for all kinds of graphs and networks.
 
 ### Training materials
 
-Tutorials, lessons or didactic resources explaining how to perform an action or
-highlighting the learning outcomes one would gain from engaging with the
-material.
+Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the
+learning outcomes one would gain from engaging with the material.
 
-*Example:* The [lesson "Beginner's Guide to Twitter Data"](/training-material/7dimO5) (Programming Historian
-website).
+_Example:_ The [lesson "Beginner's Guide to Twitter Data"](/training-material/7dimO5) (Programming
+Historian website).
 
 </div>
 </div>
@@ -174,12 +162,11 @@ website).
 
 ### Workflows
 
-Sequences of operation/steps performed on research data during their lifecycle.
-Workflows can be achieved by using diverse tools and facilities, and useful
-resources are connected to each step.
+Sequences of operation/steps performed on research data during their lifecycle. Workflows can be
+achieved by using diverse tools and facilities, and useful resources are connected to each step.
 
-*Example:* ["Extract textual content from images"](/workflow/qYzKVU) is a
-workflow composed of 13 steps coming from the Standardization Survival Kit.
+_Example:_ ["Extract textual content from images"](/workflow/qYzKVU) is a workflow composed of 13
+steps coming from the Standardization Survival Kit.
 
 </div>
 </div>
@@ -192,11 +179,11 @@ workflow composed of 13 steps coming from the Standardization Survival Kit.
 
 ### Datasets
 
-Single digital objects or collections of data, records, or information that is
-kept as a persistent unit of information in the knowledge generation process.
-Datasets are used as evidence for some phenomena.
+Single digital objects or collections of data, records, or information that is kept as a persistent
+unit of information in the knowledge generation process. Datasets are used as evidence for some
+phenomena.
 
-*Example:* [Parlamint 2.0](/dataset/9LlGMD)
+_Example:_ [Parlamint 2.0](/dataset/9LlGMD)
 
 </div>
 </div>
@@ -209,105 +196,88 @@ Datasets are used as evidence for some phenomena.
 
 ### Publications
 
-Research results published in academic journals or repositories. The SSH Open
-Marketplace references only publications that can be connected to other
-resources and is not an exhaustive collection of papers.
+Research results published in academic journals or repositories. The SSH Open Marketplace references
+only publications that can be connected to other resources and is not an exhaustive collection of
+papers.
 
-*Example:*
+_Example:_
 ["PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora"](/publication/aIYrN0)
-is a Conference Paper presented during the DH2020 Conference in which you can
-find an example of use of the SpaCy library (referenced as a tool in the SSH
-Open Marketplace).
+is a Conference Paper presented during the DH2020 Conference in which you can find an example of use
+of the SpaCy library (referenced as a tool in the SSH Open Marketplace).
 
 </div>
 </div>
 
 ## Inclusion criteria
 
-In order to ensure high quality data in the SSH Open Marketplace, we have
-established inclusion criteria for entry into the database. These apply to both
-individual items, as well as mass ingestions of entire sources (more on that
-below).
+In order to ensure high quality data in the SSH Open Marketplace, we have established inclusion
+criteria for entry into the database. These apply to both individual items, as well as mass
+ingestions of entire sources (more on that below).
 
-The Marketplace comes with a good coverage of resources relevant to academics,
-scholars and students from the Social Sciences and Humanities but research is
-dynamic and you may point us to new and upcoming items, or even entire
-collections of resources. You may suggest such collections as new sources to the
-Marketplace. import withHeadingIds from 'remark-slug' An item or source has to
-match the following selection criteria:
+The Marketplace comes with a good coverage of resources relevant to academics, scholars and students
+from the Social Sciences and Humanities but research is dynamic and you may point us to new and
+upcoming items, or even entire collections of resources. You may suggest such collections as new
+sources to the Marketplace. import withHeadingIds from 'remark-slug' An item or source has to match
+the following selection criteria:
 
-* The **relevance of the data**: Above all, the **SSH Open Marketplace serves
-  researchers in the social sciences and the humanities**, therefore, there must
-  be an established link between the content added into the Marketplace and the
-  SSH. The broad scope of the SSH Open Marketplace means that to be selected,
-  any resource must fulfill at least two criteria: (1) relevance for SSH
-  research and researchers and (2) pertinence to the digital methodologies used
-  within the SSH landscape.
-* From a technical point of view, **the data must also be current, supported,
-  and ideally open**. The SSH Open Marketplace favours the uptake of Open
-  Science workflows and open research practices. Software resources are
-  preferably built upon open source solutions. Note: Given that the SSH Open
-  Marketplace seeks to mirror actual research practices, commercial or
-  non-current resources are also referenced where these are relevant for the
-  scientific community.
-* **Contextualization** is one of the key pillars of the SSH Open Marketplace.
-  It is meant to provide a discovery portal for tools and services, while
-  placing these tools and services in context via publications, training
-  materials, datasets, and workflows. As such, these last four categories are
-  indexed in the SSH Open Marketplace insofar as they can be placed in relation
-  with tools and services, and if no relation to a tool or service exists, they
-  should not be accepted.
-* the **quality of the (meta)data**: higher quality data will increase the
-  quality of the Marketplace; this means that the more of the metadata fields in
-  the Marketplace data model are covered by an item, the better (items with just
-  a title and a link are inferior to ones containing a long description and
-  maybe even a list of contributors) and the more good quality metadata in your
-  item or source , the higher the overall quality of the item or source.
-* the **uniqueness of the data**: if the data is already in the Marketplace,
-  there is no need to add it again, either as an individual item or with a
-  source. Even though duplicate entries are dealt with within the Marketplace,
-  ingesting identical (or worse almost identical) entries multiple times uses up
-  valuable human resources that will be better put to use elsewhere considering
-  the limited timeframe and personnel of the project
-* the **expected usefulness** for the SSH community: are the items in this
-  source possibly of use to SSH researchers; it could be that they are widely
-  used already or that they offer new and interesting possibilities
-* the **representativity** of the source for the SSH domain: with the various
-  partners in the SSHOC project coming from different parts of the wide field of
-  SSH (e.g. CESSDA being mostly concerned with social sciences, while CLARIN is
-  more linguistics/language focused), considerable effort was made to find
-  sources that represent all the different facets of the SSH landscape; it also
-  made sense to prioritize sources coming from the SSHOC project itself,
-  assuming that they will have this kind of representativity baked in already.
-* Finally, in terms of legal and ethical requirements, the SSH Open Marketplace
-  maximises the findability and re-use of data in line with the **FAIR data
-  principles** – Findable, Accessible, Interoperable and Re-usable – for
-  research data, and guides users towards tools, services or training materials
-  that can help them in their FAIRification of workflows. Of necessity, the SSH
-  Open Marketplace is GDPR compliant. This is reflected in the manner of
-  presentation of the resources and – more obviously – in the management of
-  users.
+- The **relevance of the data**: Above all, the **SSH Open Marketplace serves researchers in the
+  social sciences and the humanities**, therefore, there must be an established link between the
+  content added into the Marketplace and the SSH. The broad scope of the SSH Open Marketplace means
+  that to be selected, any resource must fulfill at least two criteria: (1) relevance for SSH
+  research and researchers and (2) pertinence to the digital methodologies used within the SSH
+  landscape.
+- From a technical point of view, **the data must also be current, supported, and ideally open**.
+  The SSH Open Marketplace favours the uptake of Open Science workflows and open research practices.
+  Software resources are preferably built upon open source solutions. Note: Given that the SSH Open
+  Marketplace seeks to mirror actual research practices, commercial or non-current resources are
+  also referenced where these are relevant for the scientific community.
+- **Contextualization** is one of the key pillars of the SSH Open Marketplace. It is meant to
+  provide a discovery portal for tools and services, while placing these tools and services in
+  context via publications, training materials, datasets, and workflows. As such, these last four
+  categories are indexed in the SSH Open Marketplace insofar as they can be placed in relation with
+  tools and services, and if no relation to a tool or service exists, they should not be accepted.
+- the **quality of the (meta)data**: higher quality data will increase the quality of the
+  Marketplace; this means that the more of the metadata fields in the Marketplace data model are
+  covered by an item, the better (items with just a title and a link are inferior to ones containing
+  a long description and maybe even a list of contributors) and the more good quality metadata in
+  your item or source , the higher the overall quality of the item or source.
+- the **uniqueness of the data**: if the data is already in the Marketplace, there is no need to add
+  it again, either as an individual item or with a source. Even though duplicate entries are dealt
+  with within the Marketplace, ingesting identical (or worse almost identical) entries multiple
+  times uses up valuable human resources that will be better put to use elsewhere considering the
+  limited timeframe and personnel of the project
+- the **expected usefulness** for the SSH community: are the items in this source possibly of use to
+  SSH researchers; it could be that they are widely used already or that they offer new and
+  interesting possibilities
+- the **representativity** of the source for the SSH domain: with the various partners in the SSHOC
+  project coming from different parts of the wide field of SSH (e.g. CESSDA being mostly concerned
+  with social sciences, while CLARIN is more linguistics/language focused), considerable effort was
+  made to find sources that represent all the different facets of the SSH landscape; it also made
+  sense to prioritize sources coming from the SSHOC project itself, assuming that they will have
+  this kind of representativity baked in already.
+- Finally, in terms of legal and ethical requirements, the SSH Open Marketplace maximises the
+  findability and re-use of data in line with the **FAIR data principles** – Findable, Accessible,
+  Interoperable and Re-usable – for research data, and guides users towards tools, services or
+  training materials that can help them in their FAIRification of workflows. Of necessity, the SSH
+  Open Marketplace is GDPR compliant. This is reflected in the manner of presentation of the
+  resources and – more obviously – in the management of users.
 
-Additionally, when suggesting a source for the Marketplace, please keep in mind
-the following additional criteria:
+Additionally, when suggesting a source for the Marketplace, please keep in mind the following
+additional criteria:
 
-* the **technical interface**: it is easier to import a source into the
-  Marketplace if it offers a well-documented API; considering the limited human
-  resources of the project, sources which needed a lot of additional work before
-  they could be fed into the ingestion pipeline were placed very low on the
-  priority list
-* It was decided to focus on **primary sources** and exclude sources that only
-  aggregate information that can be found elsewhere; such “2nd hand metadata”
-  introduces additional points of failure and using the primary source instead
-  will likely result in higher quality metadata
+- the **technical interface**: it is easier to import a source into the Marketplace if it offers a
+  well-documented API; considering the limited human resources of the project, sources which needed
+  a lot of additional work before they could be fed into the ingestion pipeline were placed very low
+  on the priority list
+- It was decided to focus on **primary sources** and exclude sources that only aggregate information
+  that can be found elsewhere; such “2nd hand metadata” introduces additional points of failure and
+  using the primary source instead will likely result in higher quality metadata
 
-We believe that accurate and up-to-date content is key to making the SSH Open
-Marketplace a rich and useful discovery portal, data population and curation are
-at the heart of our work. Once (meta)data have been ingested in the Marketplace,
-we curate and enrich them thanks to a hybrid approach: automated checks are run
-on the ingested data, followed by manual review of the identified problems as
-well as of aspects that cannot be checked automatically. In this process,
-contributors and moderators are playing an essential role (See “How to
-contribute” below).
+We believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and
+useful discovery portal, data population and curation are at the heart of our work. Once (meta)data
+have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach:
+automated checks are run on the ingested data, followed by manual review of the identified problems
+as well as of aspects that cannot be checked automatically. In this process, contributors and
+moderators are playing an essential role (See “How to contribute” below).
 
 For more questions, please [contact us](/contact).
