refactor: render static pages as mdx

--- a/src/pages/about/data.page.mdx
+++ b/src/pages/about/data.page.mdx
@@ -15,18 +15,18 @@ sources are listed below.
 
 <div className="grid gap-y-4 grid-cols-[100px_1fr] xs:grid-cols-[150px_1fr] gap-x-4">
 
-![TAPoR logo](/assets/images/source_TAPoR_logo.png 'TAPoR logo')
+![TAPoR logo](/assets/images/source_TAPoR_logo.png)
 
 [TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text analysis and
 retrieval.
 
-![Programming Historian logo](/assets/images/ph-en.svg 'Programming Historian logo')
+![Programming Historian logo](/assets/images/ph-en.svg)
 
 The [Programming Historian](https://programminghistorian.org/) publishes novice-friendly,
 peer-reviewed tutorials that help humanists learn a wide range of digital tools, techniques, and
 workflows to facilitate research and teaching.
 
-![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg 'Standardization Survival Kit logo')
+![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg)
 
 The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a collection of research use
 case scenarios illustrating best practices in Digital Humanities and Heritage research.
@@ -36,68 +36,68 @@ case scenarios illustrating best practices in Digital Humanities and Heritage re
 The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you find tools that can
 process your data.
 
-![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png 'dblp computer science bibliography logo')
+![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png)
 
 The [dblp computer science bibliography](https://dblp.org/) provides open bibliographic information
 on major computer science journals and proceedings. Only a subset of publications related to digital
 humanities is being ingested in the SSH Open Marketplace.
 
-![EOSC logo](/assets/images/source_eosc_logo.png 'EOSC logo')
+![EOSC logo](/assets/images/source_eosc_logo.png)
 
 The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/) is an integrated
 platform that allows easy access to plenty of services and resources for various research domains
 along with integrated data analytics tools. Only a subset of resources, relevant for Social Sciences
 and Humanities, is being ingested in the SSH Open Marketplace.
 
-![Humanities Data](/assets/images/hdata.png 'Humanities Data')
+![Humanities Data](/assets/images/hdata.png)
 
 The [Humanities Data](https://humanitiesdata.com/) website collects and presents datasets and
 recipes stemming from Digital Humanities projects.
 
-![CESSDA Training](/assets/images/cessdatraining.png 'CESSDA Training')
+![CESSDA Training](/assets/images/cessdatraining.png)
 
 The [CESSDA Training Working Group](https://www.cessda.eu/Training), implementing one of the four
 strategic pillars of CESSDA, offers a wide variety of training in Research Data Management and data
 archiving to both researchers and data curators.
 
-![CLARIN Resource Families](/assets/images/clarin_families.png 'CLARIN Resource Families')
+![CLARIN Resource Families](/assets/images/clarin_families.png)
 
 The [CLARIN Resource Families](https://www.clarin.eu/resource-families) are a number of curated
 collections of corpora and tools. They are manually put together by CLARIN with the aim to provide a
 user-friendly overview of existing resources within and without the CLARIN infrastructure.
 
-![DARIAH-Campus](/assets/images/campus.png 'DARIAH-Campus')
+![DARIAH-Campus](/assets/images/campus.png)
 
 [DARIAH-Campus](https://campus.dariah.eu/) is both a discovery framework and a hosting platform for
 DARIAH and DARIAH-affiliated training and education materials.
 
-![DARIAH Contribution Tool](/assets/images/ikct.png 'DARIAH Contribution Tool')
+![DARIAH Contribution Tool](/assets/images/ikct.png)
 
 DARIAH member states contribute to the DARIAH distributed infrastructure with a diverse range of
 resources and services, and declare these in-kind contributions via the
 [DARIAH contribution tool](https://contrib.dariah.eu/). A selected set of these contributions has
 been added to the SSH Open Marketplace.
 
-![SSHOC logo](/assets/images/sshoc.png 'SSHOC logo')
+![SSHOC logo](/assets/images/sshoc.png)
 
 The [SSHOC service catalogue](https://www.sshopencloud.eu/service-catalogue) is the result of all
 SSHOC Work Packages to collect and consolidate the SSHOC services (or resources) offered. Based on
 the progressing implementation of the project, resources referenced in the catalogue are the most
 visible outputs of the SSHOC project.
 
-![SSHOC logo](/assets/images/sshoc.png 'SSHOC logo')
+![SSHOC logo](/assets/images/sshoc.png)
 
 Training materials produced as part of the
 [SSHOC training events](https://www.sshopencloud.eu/training/training-events).
 
-![SSHOC Conversion Hub](/assets/images/conversionhub.png 'SSHOC Conversion Hub')
+![SSHOC Conversion Hub](/assets/images/conversionhub.png)
 
 The [SSH Conversion Hub is an outcome of SSHOC WP3](https://doi.org/10.5281/zenodo.5561604). It
 allows users to search for tools that convert from one (meta-)data/file format to another one, e.g.
 from CSV (comma-separated values) to TEI (Text Encoding Initiative). import withHeadingIds from
 'remark-slug'
 
-![SSH Training Discovery Toolkit](/assets/images/tdt.png 'SSH Training Discovery Toolkit')
+![SSH Training Discovery Toolkit](/assets/images/tdt.png)
 
 The [SSH Training Discovery Toolkit](https://training-toolkit.sshopencloud.eu) acts as an overview
 on relevant sources that hold (digital) material for trainers. For such sources, selected items are
@@ -118,7 +118,7 @@ to the identification of 5 main content types.
 
 <div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
-![Tool or service](/assets/images/categories/tool-or-service.svg 'Tool or service logo')
+![Tool or service](/assets/images/categories/tool-or-service.svg)
 
 <div>
 
@@ -140,7 +140,7 @@ kinds of graphs and networks.
 
 <div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
-![Training Material](/assets/images/categories/training-material.svg 'Training Material')
+![Training Material](/assets/images/categories/training-material.svg)
 
 <div>
 
@@ -157,7 +157,7 @@ Historian website).
 
 <div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
-![Workflow](/assets/images/categories/workflow.svg 'Workflow logo')
+![Workflow](/assets/images/categories/workflow.svg)
 
 <div>
 
@@ -174,7 +174,7 @@ steps coming from the Standardization Survival Kit.
 
 <div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
-![Dataset](/assets/images/categories/dataset.svg 'Dataset logo')
+![Dataset](/assets/images/categories/dataset.svg)
 
 <div>
 
@@ -191,7 +191,7 @@ _Example:_ [Parlamint 2.0](/dataset/9LlGMD)
 
 <div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
-![Publication](/assets/images/categories/publication.svg 'Publication logo')
+![Publication](/assets/images/categories/publication.svg)
 
 <div>
 
@@ -271,7 +271,7 @@ additional criteria:
   a lot of additional work before they could be fed into the ingestion pipeline were placed very low
   on the priority list
 - It was decided to focus on **primary sources** and exclude sources that only aggregate information
-  that can be found elsewhere; such “2nd hand metadata” introduces additional points of failure and
+  that can be found elsewhere; such "2nd hand metadata" introduces additional points of failure and
   using the primary source instead will likely result in higher quality metadata
 
 We believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and
@@ -279,6 +279,6 @@ useful discovery portal, data population and curation are at the heart of our wo
 have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach:
 automated checks are run on the ingested data, followed by manual review of the identified problems
 as well as of aspects that cannot be checked automatically. In this process, contributors and
-moderators are playing an essential role (See “How to contribute” below).
+moderators are playing an essential role (See "How to contribute" below).
 
 For more questions, please [contact us](/contact).
