--- a/src/pages/about/implementation.page.mdx
+++ b/src/pages/about/implementation.page.mdx
@@ -27,9 +27,7 @@ used:
 - [Data Aggregation and proCessing Engine (DACE)](https://gitlab.pcss.pl/dl-team/aggregation/dace)
   developed by the Poznan Supercomputing and Networking Center (PSNC)
 
-![Data ingestion workflow](/assets/images/mp_ingest_workflow.png 'Data ingestion workflow')
-
-_Illustration: Overview on the different components of the ingestion workflow_
+![Data ingestion workflow](/assets/images/mp_ingest_workflow.png 'Illustration: Overview on the different components of the ingestion workflow')
 
 ## Information about the development of the website
 
