--- a/src/pages/about/service.page.mdx
+++ b/src/pages/about/service.page.mdx
@@ -61,7 +61,7 @@ Marketplace, contributes directly to the EOSC, supplementing existing services s
 Catalogue & Marketplace, and facilitating the fluid exchange of tools, services, data, and
 knowledge.
 
-![33 Key Exploitable Results of the SSHOC project](/assets/images/33sshockers.png '33 SHOCing Key Exploitable Results')
+![33 Key Exploitable Results of the SSHOC project](/assets/images/33sshockers.png)
 
 _Source:
 [SSHOC project website](https://www.sshopencloud.eu/news/33-shocing-key-exploitable-results-support-your-research-ssh-and-beyond)_
@@ -75,15 +75,11 @@ managerial matters.
 
 <div className="grid" style={{ gridTemplateColumns: 'repeat(3, 1fr)', gap: '1rem' }}>
 
-<a href="https://dariah.eu">
-  <img src="/assets/images/dariah-eu-logo.png" />
-</a>
-<a href="https://www.cessda.eu">
-  <img src="/assets/images/cessda-logo.png" />
-</a>
-<a href="https://clarin.eu">
-  <img src="/assets/images/clarin-logo.png" />
-</a>
+[![](/assets/images/dariah-eu-logo.png)](https://dariah.eu)
+
+[![](/assets/images/cessda-logo.png)](https://www.cessda.eu)
+
+[![](/assets/images/clarin-logo.png)](https://clarin.eu)
 
 </div>
 
@@ -98,13 +94,12 @@ implementation.
 Using the SSH Open Marketplace, you can:
 
 - Search the resources, refining your query through faceted search.
-  ![screenshot search resources](/assets/images/search-refine-screenshot.png 'screenshot search resources')
+  ![screenshot search resources](/assets/images/search-refine-screenshot.png)
 - Browse the content by activities or keywords
-  ![browsing screenshot](/assets/images/browse_activities_screenshot.png 'browsing screenshot')
+  ![browsing screenshot](/assets/images/browse_activities_screenshot.png)
 - Obtain a detailed view of every item registered in the website, including a structured set of
   metadata describing the resource, and highlighting the related items to facilitate the discovery
-  of relevant resources
-  ![detailed view screenshot](/assets/images/details-related-screenshot.jpg 'detailed view screenshot')
+  of relevant resources ![detailed view screenshot](/assets/images/details-related-screenshot.jpg)
 - Contribute to the Marketplace by suggesting new content or enriching existing items. See the
   [Contribute pages](/contribute/overview) for all the details.
 - Re-use the SSH Open Marketplace content using the Application programming Interface (API). See the
