--- a/src/pages/contribute/create-an-individual-item.page.mdx
+++ b/src/pages/contribute/create-an-individual-item.page.mdx
@@ -10,20 +10,20 @@ With the curation dashboard of the Marketplace you may suggest new items through
 create an individual item function. In order to access this feature, you will need to log in, which
 should be possible very conveniently using already existing credentials.
 
-![Sign in the SSH Open Marketplace steps](/assets/images/screenshot-2022-01-13-at-17.04.34.png 'Sign in the SSH Open Marketplace steps')
+![Sign in the SSH Open Marketplace steps](/assets/images/screenshot-2022-01-13-at-17.04.34.png)
 
 Once you click on the "Create" button for your chosen Marketplace entry, you will be automatically
 proposed the various fields that need to be filled out.
 
-![Create an item banner](/assets/images/create_mp.png 'Create an item banner')
+![Create an item banner](/assets/images/create_mp.png)
 
-![Edit form "Create a training material" screenshot](/assets/images/screenshot-2022-01-13-at-17.08.39.png "Edit form 'Create a training material' - screenshot")
+![Edit form "Create a training material" screenshot](/assets/images/screenshot-2022-01-13-at-17.08.39.png)
 
 If you need some explanation or examples for some of the metadata fields, please consult the
-[“Guidance for metadata fields” table](/contribute/metadata-guidelines).
+["Guidance for metadata fields" table](/contribute/metadata-guidelines).
 
 You can also save your proposed item and come back to it later, if you realise that you need some
-more time to work on perfecting the entry before submission to the editorial team. Via the “My
-account” dashboard, you can access your contributed and draft items.
+more time to work on perfecting the entry before submission to the editorial team. Via the "My
+account" dashboard, you can access your contributed and draft items.
 
-![My contributor account - screenshot](/assets/images/my_account_contrib.png 'My contributor account - screenshot')
+![My contributor account - screenshot](/assets/images/my_account_contrib.png)
