--- a/src/pages/contribute/enrich-an-individual-item.page.mdx
+++ b/src/pages/contribute/enrich-an-individual-item.page.mdx
@@ -11,7 +11,7 @@ edit forms. To access this, log in to your Marketplace account and go to the ite
 correct. Above the entry, in blue, you will find an "Edit" button, which will open up a page where
 you can fill in the information.
 
-![Screenshot of the edit form - "3DHOP - How To" item](/assets/images/edit_training.png "Screenshot of the edit form - '3DHOP - How To' item")
+![Screenshot of the edit form - "3DHOP - How To" item](/assets/images/edit_training.png)
 
 If you need some explanation or examples for some of the metadata fields, please consult the
 ["Guidance for metadata fields" table](/contribute/metadata-guidelines#guidance-for-metadata-fields).
