--- a/src/pages/contribute/metadata-guidelines.page.mdx
+++ b/src/pages/contribute/metadata-guidelines.page.mdx
@@ -39,119 +39,119 @@ should check if you are a moderator.
   </thead>
   <tbody>
     <tr>
-      <th scope="rowgroup" colspan="7">
+      <th scope="rowgroup" colSpan="7">
         Generic Metadata
       </th>
     </tr>
     <tr>
       <th scope="row">label</th>
-      <td colspan="6">mandatory</td>
+      <td colSpan="6">mandatory</td>
     </tr>
     <tr>
       <th scope="row">description</th>
-      <td colspan="6">mandatory</td>
+      <td colSpan="6">mandatory</td>
     </tr>
     <tr>
       <th scope="row">actor</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">accessibleAt</th>
-      <td colspan="4">recommended</td>
+      <td colSpan="4">recommended</td>
     </tr>
     <tr>
       <th scope="row">externalID</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">media</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">thumbnail</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">relatedItems</th>
-      <td colspan="6">recommended</td>
+      <td colSpan="6">recommended</td>
     </tr>
   </tbody>
   <tbody>
     <tr>
-      <th scope="rowgroup" colspan="7">
+      <th scope="rowgroup" colSpan="7">
         Categorisation metadata
       </th>
     </tr>
     <tr>
       <th scope="row">activity</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">keyword</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">discipline</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">language</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">tool-family</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">service-type</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">mode-of-use</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">object-format</th>
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">extent</th>
       <td />
-      <td colspan="3">recommended</td>
+      <td colSpan="3">recommended</td>
     </tr>
     <tr>
       <th scope="row">IntendedAudience</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">standard</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">resource-category</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
   </tbody>
   <tbody>
     <tr>
-      <th scope="rowgroup" colspan="7">
+      <th scope="rowgroup" colSpan="7">
         Context metadata
       </th>
     </tr>
     <tr>
       <th scope="row">see-also</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">usermanual-url</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">helpdesk-url</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">service-level-url</th>
@@ -159,20 +159,20 @@ should check if you are a moderator.
   </tbody>
   <tbody>
     <tr>
-      <th scope="rowgroup" colspan="7">
+      <th scope="rowgroup" colSpan="7">
         Access metadata
       </th>
     </tr>
     <tr>
       <th scope="row">license</th>
-      <td colspan="5">recommended</td>
+      <td colSpan="5">recommended</td>
     </tr>
     <tr>
       <th scope="row">termsofuse-url</th>
-      <td colspan="2">recommended</td>
+      <td colSpan="2">recommended</td>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">terms-of-use</th>
@@ -192,7 +192,7 @@ should check if you are a moderator.
   </tbody>
   <tbody>
     <tr>
-      <th scope="rowgroup" colspan="7">
+      <th scope="rowgroup" colSpan="7">
         Bibliographic metadata
       </th>
     </tr>
@@ -200,59 +200,59 @@ should check if you are a moderator.
       <th scope="row">publication-type</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">publisher</th>
       <td />
       <td />
-      <td colspan="2">recommended</td>
+      <td colSpan="2">recommended</td>
     </tr>
     <tr>
       <th scope="row">publication-place</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">year</th>
       <td />
-      <td colspan="3">recommended</td>
+      <td colSpan="3">recommended</td>
     </tr>
     <tr>
       <th scope="row">journal</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">conference</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">volume</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">issue</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">pages</th>
       <td />
       <td />
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
   </tbody>
   <tbody>
     <tr>
-      <th scope="rowgroup" colspan="7">
+      <th scope="rowgroup" colSpan="7">
         Technical metadata
       </th>
     </tr>
@@ -261,11 +261,11 @@ should check if you are a moderator.
     </tr>
     <tr>
       <th scope="row">technical-readiness-level</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">version</th>
-      <td colspan="1">recommended</td>
+      <td colSpan="1">recommended</td>
     </tr>
   </tbody>
 </table>
