--- a/src/pages/about/data-population.page.mdx
+++ b/src/pages/about/data-population.page.mdx
@@ -14,7 +14,8 @@ the SSHOC project, 15 sources have been ingested for a total of over 5,000 indiv
 sources are listed below.
 
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-sm) 1fr' }}>
-  ![TAPoR logo](/assets/cms/images/source-tapor-logo.png)
+
+![TAPoR logo](/assets/cms/images/source-tapor-logo.png)
 
 [TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text analysis and
 retrieval.
@@ -116,86 +117,96 @@ The conceptual approach used to structure and classify the content of the SSH Op
 to the identification of 5 main content types.
 
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-  ![Tool or service](/assets/images/categories/tool-or-service.svg)
 
-  <div>
-    ### Tools & services
+![Tool or service](/assets/images/categories/tool-or-service.svg)
 
-    Materials or products used to perform activities such as:
+<div>
 
-    *   Desktop clients solutions (to be installed locally)
-    *   Browser-based or command-line based resources
-    *   Mobile apps
-    *   Programming libraries or APIs
-    *   Data catalogues
+### Tools & services
 
-    *Example:* [Gephi](/tool-or-service/87wJWo) is a visualisation and exploration software for all
-    kinds of graphs and networks.
+Materials or products used to perform activities such as:
 
-  </div>
+- Desktop clients solutions (to be installed locally)
+- Browser-based or command-line based resources
+- Mobile apps
+- Programming libraries or APIs
+- Data catalogues
+
+_Example:_ [Gephi](/tool-or-service/87wJWo) is a visualisation and exploration software for all
+kinds of graphs and networks.
+
+</div>
 </div>
 
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-  ![Training Material](/assets/images/categories/training-material.svg)
 
-  <div>
-    ### Training materials
+![Training Material](/assets/images/categories/training-material.svg)
 
-    Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the
-    learning outcomes one would gain from engaging with the material.
+<div>
 
-    *Example:* The [lesson "Beginner's Guide to Twitter Data"](/training-material/7dimO5) (Programming
-    Historian website).
+### Training materials
 
-  </div>
+Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the
+learning outcomes one would gain from engaging with the material.
+
+_Example:_ The [lesson "Beginner's Guide to Twitter Data"](/training-material/7dimO5) (Programming
+Historian website).
+
+</div>
 </div>
 
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-  ![Workflow](/assets/images/categories/workflow.svg)
 
-  <div>
-    ### Workflows
+![Workflow](/assets/images/categories/workflow.svg)
 
-    Sequences of operation/steps performed on research data during their lifecycle. Workflows can be
-    achieved by using diverse tools and facilities, and useful resources are connected to each step.
+<div>
 
-    *Example:* ["Extract textual content from images"](/workflow/qYzKVU) is a workflow composed of 13
-    steps coming from the Standardization Survival Kit.
+### Workflows
 
-  </div>
+Sequences of operation/steps performed on research data during their lifecycle. Workflows can be
+achieved by using diverse tools and facilities, and useful resources are connected to each step.
+
+_Example:_ ["Extract textual content from images"](/workflow/qYzKVU) is a workflow composed of 13
+steps coming from the Standardization Survival Kit.
+
+</div>
 </div>
 
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-  ![Dataset](/assets/images/categories/dataset.svg)
 
-  <div>
-    ### Datasets
+![Dataset](/assets/images/categories/dataset.svg)
 
-    Single digital objects or collections of data, records, or information that is kept as a persistent
-    unit of information in the knowledge generation process. Datasets are used as evidence for some
-    phenomena.
+<div>
 
-    *Example:* [Parlamint 2.0](/dataset/9LlGMD)
+### Datasets
 
-  </div>
+Single digital objects or collections of data, records, or information that is kept as a persistent
+unit of information in the knowledge generation process. Datasets are used as evidence for some
+phenomena.
+
+_Example:_ [Parlamint 2.0](/dataset/9LlGMD)
+
+</div>
 </div>
 
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-  ![Publication](/assets/images/categories/publication.svg)
 
-  <div>
-    ### Publications
+![Publication](/assets/images/categories/publication.svg)
 
-    Research results published in academic journals or repositories. The SSH Open Marketplace references
-    only publications that can be connected to other resources and is not an exhaustive collection of
-    papers.
+<div>
 
-    *Example:*
-    ["PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora"](/publication/aIYrN0)
-    is a Conference Paper presented during the DH2020 Conference in which you can find an example of use
-    of the SpaCy library (referenced as a tool in the SSH Open Marketplace).
+### Publications
 
-  </div>
+Research results published in academic journals or repositories. The SSH Open Marketplace references
+only publications that can be connected to other resources and is not an exhaustive collection of
+papers.
+
+_Example:_
+["PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora"](/publication/aIYrN0)
+is a Conference Paper presented during the DH2020 Conference in which you can find an example of use
+of the SpaCy library (referenced as a tool in the SSH Open Marketplace).
+
+</div>
 </div>
 
 ## Inclusion criteria
