--- a/src/pages/about/implementation.page.mdx
+++ b/src/pages/about/implementation.page.mdx
@@ -6,6 +6,11 @@ navigationMenu:
   position: 3
 ---
 
+import { ApiEndpoint } from '@/components/documentation/ApiEndpoint'
+import { ApiParamTextField } from '@/components/documentation/ApiParamTextField'
+import { ApiParamSelect } from '@/components/documentation/ApiParamSelect'
+import { Item } from '@/lib/core/ui/Collection/Item'
+
 ## Data model
 
 The data model of the SSH Open Marketplace was designed to be generic and flexible enough to support
@@ -54,6 +59,16 @@ Marketplace provides at
 [https://marketplace-api.sshopencloud.eu/api/tools-services](https://marketplace-api.sshopencloud.eu/api/tools-services)
 and following pages
 [https://marketplace-api.sshopencloud.eu/api/tools-services?page=2](https://marketplace-api.sshopencloud.eu/api/tools-services?page=2).
+
+<ApiEndpoint title="Item search" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
+  <ApiParamTextField label="Search" param="q" placeholder="Search term" />
+
+  <ApiParamSelect label="Page" param="page">
+    <Item key={1}>Page 1</Item>
+    <Item key={2}>Page 2</Item>
+    <Item key={3}>Page 3</Item>
+  </ApiParamSelect>
+</ApiEndpoint>
 
 The API also includes some endpoints that are only accessible to logged in users. To use them, you
 need to ask for a JWT (JSON Web Token) to the authentication endpoint and then use the Token to
